--- a/4-19-proposal/style.css
+++ b/4-19-proposal/style.css
@@ -1,21 +1,27 @@
 /* CSS files add styling rules to your content */
 
 body {
-  font-family: helvetica, arial, sans-serif;
+  font-family: arial, sans-serif;
   margin: 2em;
   background-color:#000;
   color:#fff;
   max-width:750px;
+    padding-left:60px;
 }
 
+img
+{
+    width:600px;
+}
 h1 {
   font-style: italic;
-  color: indianred;
+  color: white;
 }
 
 h2{
   font-style: italic;
   color: red;
+    padding:10px;
 }
 
 ul{
@@ -28,7 +34,8 @@ a {
 
 marquee{
   border:solid;
-  border-color:indianred;
+  border-color:red;
+    width:500px;
 }
 
 blockquote{
