--- a/4-19-proposal/style.css
+++ b/4-19-proposal/style.css
@@ -3,8 +3,8 @@
 body {
   font-family: arial, sans-serif;
   margin: 2em;
-  background-color:#000;
-  color:#fff;
+  background-color:#b3b3b3;
+  color:#000;
   max-width:750px;
     padding-left:60px;
 }
